Salesforce Project/force-app/main/default/objects/Farmer__c/Farmer__c.object-meta.xml
<CustomObject>
    <label>Farmer</label>
    <nameField>
        <label>Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farmers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>