Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Detailed postal address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>