Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Farm_Location__c.field-meta.xml
<CustomField>
    <fullName>Farm_Location__c</fullName>
    <description>Physical location of the farm</description>
    <label>Farm Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>