Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Farmer_ID__c.field-meta.xml
<CustomField>
    <fullName>Farmer_ID__c</fullName>
    <description>Unique identifier for each farmer</description>
    <displayFormat>F-{0000}</displayFormat>
    <label>Farmer ID</label>
    <type>AutoNumber</type>
</CustomField>