Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Farmer_Status__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Status__c</fullName>
    <label>Farmer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>