Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>for contact</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>