Salesforce Project/force-app/main/default/objects/Farmer__c/fields/Total_Cattle__c.field-meta.xml
<CustomField>
    <fullName>Total_Cattle__c</fullName>
    <label>Total Cattle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>